--- a/pom.xml
+++ b/pom.xml
@@ -43,19 +43,19 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
             <version>5.7.0</version>
-            <scope>checkpw_Test</scope>
+            <scope>CheckpwTest</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-params</artifactId>
             <version>5.7.0</version>
-            <scope>checkpw_Test</scope>
+            <scope>CheckpwTest</scope>
         </dependency>
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-all</artifactId>
             <version>1.3</version>
-            <scope>checkpw_Test</scope>
+            <scope>CheckpwTest</scope>
         </dependency>
         <dependency>
             <groupId>org.jetbrains</groupId>
